syntax = "proto3";
package org.parmeet.grpc;
option java_multiple_files = true;

message HelloRequest {
  string first_name = 1;
  string last_name = 2;
}

message HelloResponse {
  string greeting = 1;
}

service HelloService {
  rpc Hello(HelloRequest) returns (HelloResponse);
}